CHARM-154 Add pageable and filterable loan querying functionality
Introduced methods and endpoints to support advanced pagination, sorting, and filtering for loans. Updated services, repositories, and domain logic to handle query parameters effectively. Also improved mapping to domain and DTOs.